add a bunch of tests, docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag_prefix =
 parentdir_prefix = stocky-p
 
 [flake8]
-exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,stocky_p/_version.py,versioneer.py
+exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,stocky_p/_version.py,versioneer.py, tests
 max-complexity = 10
 max-line-length = 120
 ignore = W503,E501,E203, E741
