update docs, tests for eda

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,4 @@ parentdir_prefix = stocky-p
 exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,stocky_p/_version.py,versioneer.py, tests
 max-complexity = 10
 max-line-length = 120
-ignore = W503,E501,E203, E741
+ignore = W503,E501,E203, E741, D401
