--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,stocky_p/_version.py,versioneer.py, tests
 max-complexity = 10
 max-line-length = 120
-ignore = W503,E501,E203, E741, D401
+ignore = W503,E501,E203, E741, D401, N806, N803, R504, C407, C408
