--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-black==19.10b0
+black
 dask[complete]
 dask-ml
 flake8
@@ -10,5 +10,5 @@ pandas>=1.0.0
 radon
 toml
 xenon
-xgboost
-git+https://github.com/ScottMGustafson/feets.git@add_dask_compatibility#egg=feets
+xgboost>=1.4.0
+git+https://github.com/ScottMGustafson/feets.git#egg=feets
