--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,26 @@ exclude = '''
   | profiling
 )/
 '''
+[tool.poetry]
+name = "cleaners"
+version = "0.1.0"
+description = "dask/pandas cleaners for your data"
+authors = ["scottmgustafson <s1gustaf@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.10"
+pandas = "^1.4.4"
+dask = "^2022.9.0"
+distributed = "^2022.9.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.1.3"
+flake8 = "^5.0.4"
+isort = "^5.10.1"
+black = "^22.8.0"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
