--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 
 [tool.black]
 line-length = 100
-target-version = ['py310']
+target-version = ['py39']
 exclude = '''
 /(
     \.eggs
@@ -29,16 +29,20 @@ license = "GNU GPL"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 pandas = "^1.4.4"
 dask = "^2022.9.0"
 distributed = "^2022.9.0"
+scikit-learn = "^1.1.2"
+Cython = "^0.29.32"
+dask-ml = "^2022.5.27"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
 flake8 = "^5.0.4"
 isort = "^5.10.1"
 black = "^22.8.0"
+flake8-docstrings = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core"]
