--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,53 @@
+[tool]
+[tool.poetry]
+name = "cleaners"
+version = "2022.9.1"
+homepage = "https://github.com/ScottMGustafson/cleaners"
+description = "Data cleaners for DS projects in the scikit-learn pipeline format."
+authors = ["scott gustafson <s1gustaf@gmail.com>"]
+readme = "README.md"
+packages = [
+    { include = "cleaners" },
+    { include = "tests", format = "sdist" },
+]
+
+[tool.poetry.dependencies]
+python = ">=3.8,<4.0"
+pandas = "^1.4.3"
+dask = "^2022.9.1"
+scikit-learn = "^1.1.2"
+
+
+[tool.poetry.extras]
+test = [
+    "pytest",
+    "black",
+    "nb_black",
+    "isort",
+    "mypy",
+    "types-PyYaml",
+    "flake8",
+    "flake8-docstrings",
+    "pytest-cov",
+    "coverage"
+]
+
+dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version", "ipykernel", "jupyter", "jupyterlab-code-formatter"]
+
+doc = [
+    "mkdocs",
+    "mkdocs-include-markdown-plugin",
+    "mkdocs-material",
+    "mkdocstrings",
+    "mkdocs-material-extensions",
+    "mkdocs-autorefs"
+]
 
 [tool.black]
 line-length = 100
+skip-string-normalization = true
 target-version = ['py39']
+include = '\.pyi?$'
 exclude = '''
 /(
     \.eggs
@@ -14,36 +60,19 @@ exclude = '''
   | buck-out
   | build
   | dist
-  # The following are specific to Black, you probably don't want those.
-  | blib2to3
-  | tests/data
-  | profiling
 )/
 '''
-[tool.poetry]
-name = "cleaners"
-version = "0.1.0"
-description = "dask/pandas cleaners for your data"
-authors = ["scottmgustafson <s1gustaf@gmail.com>"]
-license = "GNU GPL"
-readme = "README.md"
 
-[tool.poetry.dependencies]
-python = "^3.9"
-pandas = "^1.4.4"
-dask = "^2022.9.0"
-distributed = "^2022.9.0"
-scikit-learn = "^1.1.2"
-Cython = "^0.29.32"
-dask-ml = "^2022.5.27"
+[tool.isort]
+profile = "black"
+line_length = 120
+skip_gitignore = true
+# you can skip files as below
+#skip_glob = docs/conf.py
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.1.3"
-flake8 = "^5.0.4"
-isort = "^5.10.1"
-black = "^22.8.0"
-flake8-docstrings = "^1.6.0"
+[tool.mypy]
+ignore_missing_imports = true
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
