convert to poetry project, docstrings, cleanup

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,9 @@ exclude = .git,
     .pytest_cache,
     .vscode,
     .github,
-    notebooks
+    notebooks,
+    tests/,
+    conftest.py
     # By default test codes will be linted.
     # tests
 
