--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     rev: 22.3.0
     hooks:
       - id: black
-        language_version: python3.8
+        language_version: python3.9
   - repo: https://github.com/pycqa/flake8
     rev: 4.0.1
     hooks:
@@ -24,6 +24,7 @@ repos:
         additional_dependencies:
           - flake8-typing-imports==1.10.0
           - flake8-docstrings==1.6.0
+        exclude: tests/
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.920
     hooks:
