--- a/setup.cfg
+++ b/setup.cfg
@@ -66,7 +66,7 @@ commands =
         --cov-branch \
         --cov-report=html \
         --cov-report=term-missing \
-        --run-slow --cov-fail-under=90 \
+        --run-regression --cov-fail-under=90 \
         --nbmake notebooks
 
 [testenv:format]
