--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool]
 [tool.poetry]
 name = "cleaners"
-version = "2022.9.1"
+version = "2023.2.0"
 homepage = "https://github.com/ScottMGustafson/cleaners"
 description = "Data cleaners for DS projects in the scikit-learn pipeline format."
 authors = ["scott gustafson <s1gustaf@gmail.com>"]
@@ -19,36 +19,57 @@ scikit-learn = "^1.1.2"
 distributed = "^2022.9.1"
 dask-ml = "^2022.5.27"
 Cython = "^0.29.32"
-mypy = {version = "^0.971", extras = ["test"]}
-black = {version = "^22.8.0", extras = ["test"]}
-isort = {version = "^5.10.1", extras = ["test"]}
-types-PyYAML = {version = "^6.0.11", extras = ["test"]}
-flake8 = {version = "^5.0.4", extras = ["test"]}
-flake8-docstrings = {version = "^1.6.0", extras = ["test"]}
-pytest-cov = {version = "^3.0.0", extras = ["test"]}
-coverage = {version = "^6.4.4", extras = ["test"]}
-tox = {version = "^3.26.0", extras = ["dev"]}
-virtualenv = {version = "^20.16.5", extras = ["dev"]}
-pip = {version = "^22.2.2", extras = ["dev"]}
-twine = {version = "^4.0.1", extras = ["dev"]}
-toml = {version = "^0.10.2", extras = ["dev"]}
-bump2version = {version = "^1.0.1", extras = ["dev"]}
-ipykernel = {version = "^6.15.3", extras = ["dev"]}
-jupyter = {version = "^1.0.0", extras = ["dev"]}
-jupyterlab = {version = "^3.4.7", extras = ["dev"]}
-jupyterlab-code-formatter = {version = "^1.5.3", extras = ["dev"]}
-mkdocs = {version = "^1.3.1", extras = ["doc"]}
-mkdocs-include-markdown-plugin = {version = "^3.8.1", extras = ["doc"]}
-mkdocs-material = {version = "^8.5.2", extras = ["doc"]}
-mkdocstrings = {version = "^0.19.0", extras = ["doc"]}
-mkdocs-material-extensions = {version = "^1.0.3", extras = ["doc"]}
-mkdocs-autorefs = {version = "^0.4.1", extras = ["doc"]}
-nbmake = {version = "^1.3.4", extras = ["test"]}
+black = {version = "^22.8.0", optional = true}
+isort = {version = "^5.10.1", optional = true}
+flake8 = {version = "^5.0.4", optional = true}
+flake8-docstrings = {version = "^1.6.0", optional = true}
+pytest-cov = {version = "^3.0.0", optional = true}
+coverage = {version = "^6.4.4", optional = true}
+tox = {version = "^3.26.0", optional = true}
+virtualenv = {version = "^20.16.5", optional = true}
+pip = {version = "^22.2.2", optional = true}
+twine = {version = "^4.0.1", optional = true}
+toml = {version = "^0.10.2", optional = true}
+bump2version = {version = "^1.0.1", optional = true}
+ipykernel = {version = "^6.15.3", optional = true}
+jupyter = {version = "^1.0.0", optional = true}
+jupyterlab = {version = "^3.4.7", optional = true}
+jupyterlab-code-formatter = {version = "^1.5.3", optional = true}
+nbmake = {version = "^1.3.4", optional = true}
+llvmlite = "^0.39.1"
+attr = {version = "^0.3.2", extras = ["test"]}
+
+[tool.poetry.extras]
+test = [
+    "pytest",
+    "black",
+    "isort",
+    "flake8",
+    "flake8-docstrings",
+    "pytest-cov",
+    "coverage",
+    "nbmake"
+]
+
+dev = [
+    "tox",
+    "pre-commit",
+    "virtualenv",
+    "pip",
+    "twine",
+    "toml",
+    "bump2version",
+    "ipykernel",
+    "jupyter",
+    "jupyterlab",
+    "jupyterlab-code-formatter",
+    "nbmake"
+]
 
 [tool.black]
 line-length = 100
 skip-string-normalization = true
-target-version = ['py39']
+target-version = ['py310']
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -71,9 +92,6 @@ line_length = 120
 skip_gitignore = true
 # you can skip files as below
 #skip_glob = docs/conf.py
-
-[tool.mypy]
-ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
