--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ jupyterlab-code-formatter = {version = "^1.5.3", optional = true}
 nbmake = {version = "^1.3.4", optional = true}
 llvmlite = "^0.39.1"
 attr = {version = "^0.3.2", extras = ["test"]}
+pytest = "^7.2.1"
 
 [tool.poetry.extras]
 test = [
