--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,60 +12,37 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.8.1,<4.0"
 pandas = "^1.4.3"
 dask = "^2022.9.1"
 scikit-learn = "^1.1.2"
 distributed = "^2022.9.1"
 dask-ml = "^2022.5.27"
 Cython = "^0.29.32"
-black = {version = "^22.8.0", optional = true}
-isort = {version = "^5.10.1", optional = true}
-flake8 = {version = "^5.0.4", optional = true}
-flake8-docstrings = {version = "^1.6.0", optional = true}
-pytest-cov = {version = "^3.0.0", optional = true}
-coverage = {version = "^6.4.4", optional = true}
-tox = {version = "^3.26.0", optional = true}
-virtualenv = {version = "^20.16.5", optional = true}
-pip = {version = "^22.2.2", optional = true}
-twine = {version = "^4.0.1", optional = true}
-toml = {version = "^0.10.2", optional = true}
-bump2version = {version = "^1.0.1", optional = true}
-ipykernel = {version = "^6.15.3", optional = true}
-jupyter = {version = "^1.0.0", optional = true}
-jupyterlab = {version = "^3.4.7", optional = true}
-jupyterlab-code-formatter = {version = "^1.5.3", optional = true}
-nbmake = {version = "^1.3.4", optional = true}
 llvmlite = "^0.39.1"
-attr = {version = "^0.3.2", extras = ["test"]}
-pytest = "^7.2.1"
 
-[tool.poetry.extras]
-test = [
-    "pytest",
-    "black",
-    "isort",
-    "flake8",
-    "flake8-docstrings",
-    "pytest-cov",
-    "coverage",
-    "nbmake"
-]
+[tool.poetry.group.test.dependencies]
+pytest = "^7.2.2"
+black = "^23.1.0"
+isort = "^5.12.0"
+flake8 = "^6.0.0"
+flake8-docstrings = "^1.7.0"
+pytest-cov = "^4.0.0"
+coverage = "^7.2.1"
+nbmake = "^1.4.1"
 
-dev = [
-    "tox",
-    "pre-commit",
-    "virtualenv",
-    "pip",
-    "twine",
-    "toml",
-    "bump2version",
-    "ipykernel",
-    "jupyter",
-    "jupyterlab",
-    "jupyterlab-code-formatter",
-    "nbmake"
-]
+
+[tool.poetry.group.notebook.dependencies]
+jupyterlab = "^3.6.1"
+jupyterlab-code-formatter = "^1.5.3"
+ipykernel = "^6.21.3"
+
+
+[tool.poetry.group.dev.dependencies]
+tox = "^4.4.6"
+twine = "^4.0.2"
+bump2version = "^1.0.1"
+pre-commit = "^3.1.1"
 
 [tool.black]
 line-length = 100
