--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ Cython = "^0.29.32"
 llvmlite = "^0.39.1"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.2.2"
+pytest = ">=7.2.0"
 black = "^23.1.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
