--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-current_version = 2022.9.1
+current_version = 2023.3.0
 commit = True
-tag = False
+tag = True
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
